--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Catálogo de Exigências Fitossanitárias para o Trânsito Interestadual</title>
     <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                                  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+       ga('create', 'UA-60679065-1', 'auto');
+       ga('send', 'pageview');
+    </script>
+    <script>
       Array.prototype.indexOf||(Array.prototype.indexOf=function(r,t){var n;if(null==this)throw new TypeError('"this" is null or not defined');var e=Object(this),i=e.length>>>0;if(0===i)return-1;var a=+t||0;if(1/0===Math.abs(a)&&(a=0),a>=i)return-1;for(n=Math.max(a>=0?a:i-Math.abs(a),0);i>n;){if(n in e&&e[n]===r)return n;n++}return-1});
     </script>
     <script src="db.js"></script>
