--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>CEFiTI</title>
 <!--    <title>Catálogo de Exigências Fitossanitárias para o Trânsito Interestadual</title>-->
-
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                                    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-60679065-1', 'auto');
-        ga('send', 'pageview');
-      </script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-60679065-1', 'auto');
+      ga('send', 'pageview');
+    </script>
     <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-template.css"></link>
     <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-menu.css"></link>
     <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-tabela.css"></link>
