--- a/index.html
+++ b/index.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>CEFiTI</title>
-<!--    <title>Catálogo de Exigências Fitossanitárias para o Trânsito Interestadual</title>-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-60679065-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-template.css"></link>
-    <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-menu.css"></link>
-    <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-tabela.css"></link>
-    <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-formulario.css"></link>
-    <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-link.css"></link>
-    <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-abas.css"></link>
-    <link rel="stylesheet" type="text/css" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-impressao.css"></link>
-    <link rel="stylesheet" type="text/css" href="app.css"></link>
-  </head>
- <body >
-      <div id="app"/>
-
-      <script src="react.min.js"></script>
-      <script src="react-dom.min.js"></script>
-      <script src="mobx.umd.min.js"></script>
-      <script src="db.js"></script>
-      <script src="bundle.js"></script>
-</body>
-  
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="description" content=""><meta name="viewport" content="width=device-width,initial-scale=1"><title>CEFiTI</title><script>!function(e,t,a,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=t.createElement(a),s=t.getElementsByTagName(a)[0],o.async=1,o.src="https://www.google-analytics.com/analytics.js",s.parentNode.insertBefore(o,s)}(window,document,"script",0,"ga"),ga("create","UA-60679065-1","auto"),ga("send","pageview")</script><link rel="stylesheet" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-template.css"><link rel="stylesheet" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-menu.css"><link rel="stylesheet" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-tabela.css"><link rel="stylesheet" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-formulario.css"><link rel="stylesheet" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-link.css"><link rel="stylesheet" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-abas.css"><link rel="stylesheet" href="http://sistemasweb.agricultura.gov.br/styles_java/css/estilo-impressao.css"><link rel="stylesheet" href="app.css"></head><body><div id="app"/><script src="db.js"></script><script src="pragas.js"></script><script src="hospedeiros.js"></script><script src="regras.js"></script><script type="text/javascript" src="./static/js/main.0c023dfd.js"></script></body></html>
